cabal-version:      3.0
name:               aoc24
version:            0.1.0.0
license:            ISC
author:             Johan Levin
build-type:         Simple

common warnings
    ghc-options: -Wall

library aoc24-solutions
    import:           warnings
    exposed-modules:  Aoc24
    build-depends:    base ^>=4.20.0.0, regex-tdfa ^>= 1.3.2.2, ghc-experimental
    hs-source-dirs:   src
    other-modules:    Day01, Day02, Day03
    default-language: GHC2021
    if arch(wasm32)
        ghc-options:  -o out/aoc24.wasm -no-hs-main -optl-mexec-model=reactor -optl-Wl,--export=solve

test-suite aoc24-test
    import:           warnings
    default-language: GHC2021
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:    base ^>=4.20.0.0, HUnit ^>=1.6.2.0, aoc24-solutions
