cabal-version:      3.0
name:               aoc24
version:            0.1.0.0
license:            ISC
author:             Johan Levin
build-type:         Simple

common warnings
    ghc-options: -Wall

library aoc24-solutions
    import:           warnings
    exposed-modules:  Aoc24
    build-depends:    base, regex-tdfa, ghc-experimental, split, containers, monad-memo
    hs-source-dirs:   src
    other-modules:    Day01, Day02, Day03, Day04, Day05, Day06, Day07, Day08, Day09, Day10, Day11,
                      Day12, Day13
    default-language: GHC2021
    if arch(wasm32)
        ghc-options:  -o out/aoc24.wasm -no-hs-main -optl-mexec-model=reactor -optl-Wl,--export=solve

test-suite aoc24-test
    import:           warnings
    default-language: GHC2021
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:    base, HUnit, aoc24-solutions
